fix(blog-detail): adjust spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -610,6 +610,7 @@ main ol li {
 main ul li::marker,
 main ol li::marker {
   color: var(--primary-purple);
+  font-family: var(--sans-serif-font-medium);
 }
 
 /* Special case lists */
@@ -633,7 +634,7 @@ main .list-section ul li {
 .article-content-wrapper ul,
 .article-content-wrapper ol {
   font-size: var(--font-size-16);
-  margin: var(--spacer-element-09) 0 var(--spacer-element-09) 0;
+  margin: var(--spacer-element-09) 0;
 }
 
 .article-content-wrapper h2 {
@@ -1533,7 +1534,7 @@ main pre {
   .article-content-wrapper ul,
   .article-content-wrapper ol {
     font-size: var(--font-size-21);
-    margin: var(--spacer-element-09) 0 var(--spacer-element-09) var(--spacer-element-07);
+    margin: var(--spacer-element-09) 0;
   }
 
   .article-content {
